force-app/main/default/objects/MyFamily__c/MyFamily__c.object-meta.xml
<CustomObject>
    <label>MyFamily</label>
    <nameField>
        <label>MyFamily Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyFamilies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>