force-app/main/default/objects/MyFamily__c/fields/Family_Head__c.field-meta.xml
<CustomField>
    <fullName>Family_Head__c</fullName>
    <description>Head of the family one</description>
    <label>Family Head</label>
    <length>100</length>
    <type>Text</type>
</CustomField>