force-app/main/default/objects/MyFamily__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>This field stores the Phone number of the family</description>
    <label>Phone Numbers</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>